tests/machine/x/kt/list_assign.kt
fun main() {
	var nums = listOf(1, 2)
	nums[1] = 3
	println(nums[1])
}
